Estilos visuales del header completos.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,21 @@
             <div class="contenido-titulo-menu">
                 <div class="titulo-proyecto-bsharp"><a href="">Proyecto BSharp</a></div>
                 <div class="menu-de-inicio"><span class="icon-menu"></span></div>
+                <div class="menu-de-inicio-escritorio">
+                    <div class="menu-de-inicio-escritorio-usuario-ingresar">
+                        <span class="texto-nombre-de-usuario">Usuario</span>
+                        <span class="formulario-ingresar"><input type="text" maxlength="20"></span>
+                    </div>
+                    <div class="menu-de-inicio-escritorio-contraseña">
+                        <span class="texto-contraseña">Contraseña</span>
+                        <span class="formulario-contraseña"><input type="text" maxlength="50"></span>
+                    </div>
+                    <div class="menu-de-inicio-escritorio-boton-ingresar">
+                        <span class="boton-ingresar"><input type="submit" value="Ingresar"></span>
+                    </div>
+                </div>
             </div>
-
+            
         </header>
         <!-- fin header -->
     </div>
