Configuración visual del formulario de registro completa.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,28 @@
                         <span class="formulario-contraseña"><input type="text" maxlength="50"></span>
                     </div>
                     <div class="menu-de-inicio-escritorio-boton-ingresar">
-                        <span class="boton-ingresar"><input type="submit" value="Ingresar"></span>
+                        <span class="boton-ingresar"><input type="submit" value="Ingresar" class="menu-de-inicio-boton-ingresar-estilo"></span>
                     </div>
                 </div>
             </div>
-            
+
         </header>
+        <div class="separador"></div>
+        <div class="formulario-de-registro">
+            <div class="texto-eres-nuevo">¿Eres nuevo?</div>
+            <form class="formulario-de-registro-formulario">
+                Nombre de usuario:<br>
+                <input type="text" max="20"><br>
+                Correo electrónico:<br>
+                <input type="text" max="50"><br>
+                Contraseña:<br>
+                <input type="text" max="50"><br>
+                Repetir contraseña:<br>
+                <input type="text" max="50"><br>
+                <div class="formulario-de-registro-boton-submit"><input type="submit" value="Registrarte"></div>
+
+            </form>
+        </div>
         <!-- fin header -->
     </div>
 </body>
