Cambio de nombres de archivos.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Proyecto BSharp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style - index.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style-index.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="icomoon/style.css" />
     <script src="main.js"></script>
 </head>
@@ -38,7 +38,7 @@
         <div class="separador"></div>
         <div class="formulario-de-registro">
             <div class="texto-eres-nuevo">¿Eres nuevo?</div>
-            <form class="formulario-de-registro-formulario" method="POST" action="index-procesarFormularios.php">
+            <form class="formulario-de-registro-formulario" method="POST" action="index_procesar_formularios.php>
                 Nombre de usuario:<br>
                 <input type="text" max="20" name="usuario"><br>
                 Correo electrónico:<br>
